[metadata]
name = fpmachine
version = 0.0.1
author = Samy Sultan
author_email = samyibraheem@gmail.com
description = python driver for fingerprint machine (biometrics)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sijms/fpmachine
project_urls =
    Bug Tracker = https://github.com/sijms/fpmachine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src